Lots of stuff works!

--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -21,29 +21,29 @@
       <!-- Label and input for lesson_name -->
       <div class="form-group">
         <label for="lesson_name" class="control-label">
-          Lesson name
+          What should we call the lesson?
         </label>
 
         <input type="text" id="lesson_name" name="lesson_name" placeholder="Lesson name" class="form-control" value="<%= @lesson.lesson_name %>">
       </div>
 
       <!-- Label and input for video_id -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="video_id" class="control-label">
           Video
         </label>
 
         <input type="text" id="video_id" name="video_id" placeholder="Video" class="form-control" value="<%= @lesson.video_id %>">
-      </div>
+      </div> -->
 
       <!-- Label and input for resources_id -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="resources_id" class="control-label">
           Resources
-        </label>
+        </label> -->
 
-        <input type="text" id="resources_id" name="resources_id" placeholder="Resources" class="form-control" value="<%= @lesson.resources_id %>">
-      </div>
+        <!-- <input type="text" id="resources_id" name="resources_id" placeholder="Resources" class="form-control" value="<%= @lesson.resources_id %>">
+      </div> -->
 
       <button class="btn btn-success">
         Create Lesson
