--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
-      
+
       <dt>Video</dt>
       <dd><% @lesson.videos.each do |video| %>
         <embed height="450px" width="800px" src="<%= video.embed_address %>">
@@ -15,6 +15,34 @@
       <dd><dd><% @lesson.resources.each do |resource| %>
         <embed height="550px" width="800px" src="<%= resource.embed_address %>">
       <% end  %></dd></dd>
+
+      <form action="/create_comment" method="post">
+                    <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+                    <!-- Label and input for year -->
+          <div class="form-group">
+      <label for="comment" class="control-label">
+                        Add a Comment
+                      </label>
+                      <input type="text" id="comment" name="body" placeholder="Add a comment..." class="form-control" value="<%= @newcomment.body %>">
+                      <input name="lesson_id" type="hidden" value="<%= @lesson.id %>">
+                      <input name="user_id" type="hidden" value="<%= current_user.id %>">
+                            <button class="btn btn-success">
+                                <i class="fa fa-commenting-o" aria-hidden="true"></i>
+                            </button></form>
+    <% @lesson.comments.each do |comment| %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <strong><%= comment.user.username %></strong>
+        </div>
+          <div class="panel-body">
+            <%= comment.body %>
+          </div>
+        </div>
+      <% end %>
+
+
 
     </dl>
 
