more slight cosmetic changes

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -9,14 +9,14 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Lesson name</th>
+        <th>Lesson</th>
 
         <th>Actions</th>
       </tr>
 
       <% @lessons.each do |lesson| %>
       <tr>
-        <td><a href="/lessons/<%= lesson.id %>"><%= lesson.lesson_name %></a></td>
+        <td><a class="btn btn-info" href="/lessons/<%= lesson.id %>"><%= lesson.lesson_name %></a></td>
 
         <td>
           <a href="/lessons/<%= lesson.id %>" class="btn btn-primary">Show</a>
