--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,12 +8,36 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="form-group">
-      <%= f.label :username, class: "col-sm-2 control-label" %>
-        <div class="col-sm-10">
-          <%= f.text_field :username, autofocus: true, class: "form-control" %>
-        </div>
+  <div class="field">
+    <%= f.label :username %>
+    <div>
+      <%= f.text_field :username, autofocus: true %>
+    </div>
   </div>
+
+  <div class="field">
+    <%= f.label :first_name %>
+    <div>
+      <%= f.text_field :first_name, autofocus: true %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %>
+    <div>
+      <%= f.text_field :last_name, autofocus: true %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= f.label :school_or_company %>
+    <div>
+      <%= f.text_field :school_or_company, autofocus: true %>
+    </div>
+  </div>
+
+
+
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
