--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -6,7 +6,7 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>School</dt>
-      <dd><%= @enrollment.school_id %></dd>
+      <dd><%= @enrollment.school.school_name %></dd>
 
       <dt>User</dt>
       <dd><%= @enrollment.user_id %></dd>
