--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -81,6 +81,21 @@
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default">
             <div class="panel-heading">
+<h3>Update user enrollment</h3>
+            </div>
+          <div class="panel-body">
+<h5>Do you currently attend business school? Help our outreach by letting us know which school you attend!</h5>
+<a href="/enrollments/new" class="btn btn-success btn-block">Update my enrollment</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-success btn-danger" %></p>
