--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -9,15 +9,14 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>School</th>
-        <th>User</th>
+        <th>You attend the following school:</th>
         <th>Actions</th>
       </tr>
 
       <% @enrollments.each do |enrollment| %>
       <tr>
-        <td><%= enrollment.school_id %></td>
-        <td><%= enrollment.user_id %></td>
+        <td><%= enrollment.school.school_name %></td>
+
         <td>
           <a href="/enrollments/<%= enrollment.id %>" class="btn btn-primary">Show</a>
           <a href="/enrollments/<%= enrollment.id %>/edit" class="btn btn-warning">Edit</a>
