--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h3>Enrollment #<%= @enrollment.id %></h3>
+  <h3><%= current_user.username %></h3>
 </div>
 
 <div class="row">
@@ -8,8 +8,8 @@
       <dt>School</dt>
       <dd><%= @enrollment.school.school_name %></dd>
 
-      <dt>User</dt>
-      <dd><%= @enrollment.user_id %></dd>
+      <!-- <dt>User</dt>
+      <dd><%= @enrollment.user_id %></dd> -->
 
     </dl>
 
