--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -20,20 +20,20 @@
 
       <!-- Label and input for user_id -->
       <div class="form-group">
-        <label for="user_id" class="control-label">
+        <!-- <label for="user_id" class="control-label">
           User
-        </label>
+        </label> -->
 
-        <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @comment.user_id %>">
+        <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
       </div>
 
       <!-- Label and input for lesson_id -->
       <div class="form-group">
-        <label for="lesson_id" class="control-label">
+        <!-- <label for="lesson_id" class="control-label">
           Lesson
-        </label>
+        </label> -->
 
-        <input type="text" id="lesson_id" name="lesson_id" placeholder="Lesson" class="form-control" value="<%= @comment.lesson_id %>">
+        <input type="hidden" id="lesson_id" name="lesson_id" placeholder="Lesson" class="form-control" value="<%= @comment.lesson_id %>">
       </div>
 
       <!-- Label and input for body -->
