--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,16 +41,16 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/lessons">Lessons</a></li>
-          <li><a href="/resources">Resources</a></li>
-          <li><a href="/videos">Videos</a></li>
-          <!-- <li><a href="/enrollments">Enrollments</a></li>
-          <li><a href="/mini_quizzes">MiniQuizzes</a></li>
-          <li><a href="/schools">Schools</a></li>
-          <li><a href="/comments">Comments</a></li>
+          <!-- <li><a href="/resources">Resources</a></li>
+          <li><a href="/videos">Videos</a></li> -->
+          <!-- <li><a href="/enrollments">Enrollments</a></li> -->
+          <!-- <li><a href="/mini_quizzes">MiniQuizzes</a></li> -->
+          <!-- <li><a href="/schools">Schools</a></li>
+          <li><a href="/comments">Comments</a></li> -->
           <li><a href="/suggestions">Suggestions</a></li>
-          <li><a href="/quiz_results">My quizzes</a></li> -->
+          <li><a href="/quiz_results">My quizzes</a></li>
           <li><a href="/favorites">Favorites</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
+          <!-- <li><a href="/rails/info">Sitemap</a></li> -->
         </ul>
 
         <ul class="nav navbar-nav navbar-right"><%  if current_user != nil %>
