--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,7 +1,6 @@
 <div class="page-header">
   <h1>
     Comments
-    <a href="/comments/new" class="btn btn-lg btn-success">New Comment</a>
   </h1>
 </div>
 
@@ -9,7 +8,7 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>User</th>
+
         <th>Lesson</th>
         <th>Body</th>
         <th>Actions</th>
@@ -17,8 +16,8 @@
 
       <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user_id %></td>
-        <td><%= comment.lesson_id %></td>
+
+        <td><%= comment.lesson.lesson_name %></td>
         <td><%= comment.body %></td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
