--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -28,22 +28,22 @@
       </div>
 
       <!-- Label and input for video_id -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="video_id" class="control-label">
           Video
         </label>
 
         <input type="text" id="video_id" name="video_id" placeholder="Video" class="form-control" value="<%= @lesson.video_id %>">
-      </div>
+      </div> -->
 
       <!-- Label and input for resources_id -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="resources_id" class="control-label">
           Resources
         </label>
 
         <input type="text" id="resources_id" name="resources_id" placeholder="Resources" class="form-control" value="<%= @lesson.resources_id %>">
-      </div>
+      </div> -->
 
       <button class="btn btn-warning">
         Update Lesson
