--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -1,15 +1,15 @@
 <div class="page-header">
-  <h3>Favorite #<%= @favorite.id %></h3>
+  <h3>Favorited: <%= @favorite.lesson.lesson_name %></h3>
 </div>
 
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @favorite.user_id %></dd>
+      <dd><%= @favorite.user.username %></dd>
 
       <dt>Lesson</dt>
-      <dd><%= @favorite.lesson_id %></dd>
+      <dd><%= @favorite.lesson.lesson_name %></dd>
 
     </dl>
 
