suggestion link fixed
still need to fix suggestions pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
           <!-- <li><a href="/mini_quizzes">MiniQuizzes</a></li> -->
           <!-- <li><a href="/schools">Schools</a></li>
           <li><a href="/comments">Comments</a></li> -->
-          <li><a href="/suggestions">Suggestions</a></li>
+          <li><a href="/suggestions/new">Suggestions</a></li>
           <li><a href="/quiz_results">My quizzes</a></li>
           <li><a href="/favorites">Favorites</a></li>
           <!-- <li><a href="/rails/info">Sitemap</a></li> -->
