--- a/app/views/suggestions/new.html.erb
+++ b/app/views/suggestions/new.html.erb
@@ -33,7 +33,7 @@
           Lesson
         </label>
 
-        <input type="text" id="lesson_id" name="lesson_id" placeholder="Lesson" class="form-control" value="<%= @suggestion.lesson_id %>">
+        <%= select_tag(:lesson_id, options_from_collection_for_select(Lesson.all, :id, :lesson_name), :class => "form-control") %>
       </div>
 
       <!-- Label and input for link_to_resource -->
