--- a/app/views/mini_quizzes/show.html.erb
+++ b/app/views/mini_quizzes/show.html.erb
@@ -6,7 +6,7 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Lesson</dt>
-      <dd><%= @mini_quiz.lesson_id %></dd>
+      <dd><%= @mini_quiz.lesson.lesson_name %></dd>
 
       <dt>Description</dt>
       <dd><%= @mini_quiz.description %></dd>
