--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -6,7 +6,7 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Lesson</dt>
-      <dd><%= @video.lesson_id %></dd>
+      <dd><%= @video.lesson.lesson_name %></dd>
 
       <dt>Location</dt>
       <dd><%= @video.location %></dd>
