--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -17,7 +17,7 @@
       <% @favorites.each do |favorite| %>
       <tr>
         <td><%= favorite.user_id %></td>
-        <td><%= favorite.lesson_id %></td>
+        <td><%= favorite.lesson.lesson_name %></td>
         <td>
           <a href="/favorites/<%= favorite.id %>" class="btn btn-primary">Show</a>
           <a href="/favorites/<%= favorite.id %>/edit" class="btn btn-warning">Edit</a>
