--- a/app/views/enrollments/edit.html.erb
+++ b/app/views/enrollments/edit.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="page-header">
-  <h3>Edit Enrollment #<%= @enrollment.id %></h3>
+  <h3>Edit Your Enrollment</h3>
 </div>
 
 <div class="row">
