--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1>
-    Favorites
+    My Favorites
     <a href="/favorites/new" class="btn btn-lg btn-success">New Favorite</a>
   </h1>
 </div>
@@ -9,14 +9,12 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>User</th>
         <th>Lesson</th>
         <th>Actions</th>
       </tr>
 
-      <% @favorites.each do |favorite| %>
+      <% current_user.favorites.each do |favorite| %>
       <tr>
-        <td><%= favorite.user_id %></td>
         <td><%= favorite.lesson.lesson_name %></td>
         <td>
           <a href="/favorites/<%= favorite.id %>" class="btn btn-primary">Show</a>
